--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </div>
                     <div class="text">
                         <h4>QA Specialist</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat odit at distinctio saepe magnam eveniet eligendi nobis minus dolorem hic! Molestiae, libero quo molestias cum atque eveniet illum ad qui.</p>
+                        <p>ipsum dolor, sit amet consectetur adipisicing elit. Placeat odit at distinctio saepe magnam eveniet eligendi nobis minus dolorem hic! Molestiae, libero quo molestias cum atque eveniet illum ad qui.</p>
                     </div>
                 </div>
                 <div class="box">
