--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="left_Side">
             <div class="profileText">
                 <div class="imgBx">
-                    <img src="/image.jpg" alt="profilePicture">
+                    <!-- <img src="/image.jpg" alt="profilePicture"> -->
                 </div>
                 <h2>Dhiraj Patil <br> <span>Web Developer</span></h2>
             </div>
@@ -30,11 +30,12 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
-                        <span class="text">www.myWebSite.com</span>
+                        <!-- <span class="text">https://github.com/dhirajDPatil/portfoliocv</span> -->
+                        <span class="text"><a id="link" href="https://github.com/dhirajDPatil/portfoliocv">www.github.com</a></span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
-                        <span class="text">www.linkedIn.com</span>
+                        <span class="text"><a id="link" href="https://www.linkedin.com/in/dhiraj-patil-085a1711b/">www.linkedin.com</a></span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
@@ -96,7 +97,8 @@
         <div class="right_Side">
             <div class="about">
                 <h2 class="title2">Profile</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio mollitia quod, cumque ad nostrum officiis deleniti eligendi. Amet in maiores iste, eos corporis velit nulla exercitationem corrupti, distinctio dolor dignissimos?</p>
+                <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio mollitia quod, cumque ad nostrum officiis deleniti eligendi. Amet in maiores iste, eos corporis velit nulla exercitationem corrupti, distinctio dolor dignissimos?</p> -->
+                <p>Quality Assurance Specialist Engineer at Dassault System Solution Lab, Pune</p>
             </div>
             <div class="about">
                 <h2 class="title2">Experience</h2>
@@ -107,7 +109,17 @@
                     </div>
                     <div class="text">
                         <h4>QA Specialist</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat odit at distinctio saepe magnam eveniet eligendi nobis minus dolorem hic! Molestiae, libero quo molestias cum atque eveniet illum ad qui.</p>
+                        <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat odit at distinctio saepe magnam eveniet eligendi nobis minus dolorem hic! Molestiae, libero quo molestias cum atque eveniet illum ad qui.</p> -->
+                        <p> Roles and activities performed
+                            <li>Developed test plan, test scenarios, test cases, test scripts for new functional highlights.</li>
+                            <li>Reviewed functional documents and suggested changes to provide detail information.</li>
+                            <li>Performed regression free test to check impacts of implementation of new functionalities.</li>
+                            <li>Automated scenarios to in order to check regressions due to latest functionalities.</li>
+                            <li>Automated Web scenario using sikuli + selenium framework to help other team to achieve their automation target.</li>
+                            <li>Basic customization on host server/machine where services are installed.</li>
+                            <li>Basic customization on host server/machine where services are installed.</li>
+                            <li>Cloud certification of new roles.</li>
+                        </p>
                     </div>
                 </div>
                 <div class="box">
@@ -117,7 +129,15 @@
                     </div>
                     <div class="text">
                         <h4>Design Engineer</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat odit at distinctio saepe magnam eveniet eligendi nobis minus dolorem hic! Molestiae, libero quo molestias cum atque eveniet illum ad qui.</p>
+                        <p><i>“Modeling and Simulation of Command and Control System to Execute the Fuel Sequencing for Fighter Aircraft Using AMESim”.</i> 
+                            <li>Carried out Aircraft complex tank modeling in CATIA, modeling of full fuel system and its subsystems within LMS AMESim Software</li>
+                            <li>Mathematical modeling of Turbo Pump, Signal operated level sensor using Boolean, Optimization of system during development.</li>
+                            <li>Modeling of fighter aircraft fuel tank in CATIA using skin model of aircraft and physical dimensions</li>
+                            <li>Control system design in AMEsim for fuel consumption of aircraft.</li>
+                            <li>COG data extraction using CATIA MACROS in excel sheet simulating fuel consumption for roll and pitch</li>
+                            <li>Compilation of data in order to use it in AMESim software</li>
+                            <li><b>Impact:</b> Virtual simulation environment helps to build new aircraft fuel system, and predict fuel consumption in existing aircraft for their sortie</li>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -159,7 +179,7 @@
             <div class="about interest">
                 <h2 class="title2">Interest</h2>
                 <ul>
-                    <li><i class="fa fa-microphone" aria-hidden="true"></i> Singing</li>
+                    <li><i class="fa fa-futbol-o" aria-hidden="true"></i> Foot Ball</li>
                     <li><i class="fa fa-book" aria-hidden="true"></i> Reading</li>
                     <li><i class="fa fa-cutlery" aria-hidden="true"></i> Cooking</li>
                     <li><i class="fa fa-plane" aria-hidden="true"></i> Traveling</li>
